@@ -17,8 +17,6 @@
 package kafka.log.remote;
 
 import kafka.cluster.Partition;
-import kafka.log.UnifiedLog;
-import kafka.server.DelayedRemoteListOffsets;
 
 import org.apache.kafka.common.Endpoint;
 import org.apache.kafka.common.KafkaException;
@@ -67,6 +65,7 @@ import org.apache.kafka.server.log.remote.storage.RemoteStorageException;
 import org.apache.kafka.server.log.remote.storage.RemoteStorageManager;
 import org.apache.kafka.server.metrics.KafkaMetricsGroup;
 import org.apache.kafka.server.purgatory.DelayedOperationPurgatory;
+import org.apache.kafka.server.purgatory.DelayedRemoteListOffsets;
 import org.apache.kafka.server.purgatory.TopicPartitionOperationKey;
 import org.apache.kafka.server.quota.QuotaType;
 import org.apache.kafka.server.storage.log.FetchIsolation;
@@ -74,6 +73,7 @@ import org.apache.kafka.storage.internals.checkpoint.LeaderEpochCheckpointFile;
 import org.apache.kafka.storage.internals.epoch.LeaderEpochFileCache;
 import org.apache.kafka.storage.internals.log.AbortedTxn;
 import org.apache.kafka.storage.internals.log.AsyncOffsetReadFutureHolder;
+import org.apache.kafka.storage.internals.log.AsyncOffsetReader;
 import org.apache.kafka.storage.internals.log.EpochEntry;
 import org.apache.kafka.storage.internals.log.FetchDataInfo;
 import org.apache.kafka.storage.internals.log.LogOffsetMetadata;
@@ -87,6 +87,7 @@ import org.apache.kafka.storage.internals.log.RemoteStorageFetchInfo;
 import org.apache.kafka.storage.internals.log.RemoteStorageThreadPool;
 import org.apache.kafka.storage.internals.log.TransactionIndex;
 import org.apache.kafka.storage.internals.log.TxnIndexSearchResult;
+import org.apache.kafka.storage.internals.log.UnifiedLog;
 import org.apache.kafka.storage.log.metrics.BrokerTopicStats;
 
 import com.yammer.metrics.core.Timer;
@@ -137,12 +138,8 @@ import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import scala.Option;
-import scala.jdk.javaapi.CollectionConverters;
 
 import static org.apache.kafka.server.config.ServerLogConfigs.LOG_DIR_CONFIG;
 import static org.apache.kafka.server.log.remote.metadata.storage.TopicBasedRemoteLogMetadataManagerConfig.REMOTE_LOG_METADATA_COMMON_CLIENT_PREFIX;
@@ -158,7 +155,7 @@ import static org.apache.kafka.server.log.remote.storage.RemoteStorageMetrics.RE
  * - copying log segments to the remote storage
  * - cleaning up segments that are expired based on retention size or retention time
  */
-public class RemoteLogManager implements Closeable {
+public class RemoteLogManager implements Closeable, AsyncOffsetReader {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(RemoteLogManager.class);
     private static final String REMOTE_LOG_READER_THREAD_NAME_PATTERN = "remote-log-reader-%d";
@@ -595,7 +592,7 @@ public class RemoteLogManager implements Closeable {
         for (RemoteLogSegmentMetadataUpdate event : events) {
             result.add(remoteLogMetadataManager.updateRemoteLogSegmentMetadata(event));
         }
-        return CompletableFuture.allOf(result.toArray(new CompletableFuture[0]));
+        return CompletableFuture.allOf(result.toArray(new CompletableFuture<?>[0]));
     }
 
     public Optional<RemoteLogSegmentMetadata> fetchRemoteLogSegmentMetadata(TopicPartition topicPartition,
@@ -662,12 +659,13 @@ public class RemoteLogManager implements Closeable {
         return leaderEpoch == RecordBatch.NO_PARTITION_LEADER_EPOCH ? Optional.empty() : Optional.of(leaderEpoch);
     }
 
+    @Override
     public AsyncOffsetReadFutureHolder<OffsetResultHolder.FileRecordsOrError> asyncOffsetRead(
             TopicPartition topicPartition,
-            Long timestamp,
-            Long startingOffset,
+            long timestamp,
+            long startingOffset,
             LeaderEpochFileCache leaderEpochCache,
-            Supplier<Option<FileRecords.TimestampAndOffset>> searchLocalLog) {
+            TimestampAndOffsetSupplier searchLocalLog) {
         CompletableFuture<OffsetResultHolder.FileRecordsOrError> taskFuture = new CompletableFuture<>();
         Future<Void> jobFuture = remoteStorageReaderThreadPool.submit(
                 new RemoteLogOffsetReader(this, topicPartition, timestamp, startingOffset, leaderEpochCache, searchLocalLog, result -> {
@@ -732,7 +730,7 @@ public class RemoteLogManager implements Closeable {
                     && isRemoteSegmentWithinLeaderEpochs(rlsMetadata, unifiedLog.logEndOffset(), epochWithOffsets)
                     && rlsMetadata.state().equals(RemoteLogSegmentState.COPY_SEGMENT_FINISHED)) {
                     // cache to avoid race conditions
-                    List<LogSegment> segmentsCopy = new ArrayList<>(unifiedLog.logSegments());
+                    List<LogSegment> segmentsCopy = unifiedLog.logSegments();
                     if (segmentsCopy.isEmpty() || rlsMetadata.startOffset() < segmentsCopy.get(0).baseOffset()) {
                         // search in remote-log
                         return lookupTimestamp(rlsMetadata, timestamp, startingOffset);
@@ -777,11 +775,7 @@ public class RemoteLogManager implements Closeable {
      * @return the leader epoch entries
      */
     List<EpochEntry> getLeaderEpochEntries(UnifiedLog log, long startOffset, long endOffset) {
-        if (log.leaderEpochCache().isDefined()) {
-            return log.leaderEpochCache().get().epochEntriesInRange(startOffset, endOffset);
-        } else {
-            return Collections.emptyList();
-        }
+        return log.leaderEpochCache().epochEntriesInRange(startOffset, endOffset);
     }
 
     // VisibleForTesting
@@ -907,7 +901,7 @@ public class RemoteLogManager implements Closeable {
          */
         List<EnrichedLogSegment> candidateLogSegments(UnifiedLog log, Long fromOffset, Long lastStableOffset) {
             List<EnrichedLogSegment> candidateLogSegments = new ArrayList<>();
-            List<LogSegment> segments = CollectionConverters.asJava(log.logSegments(fromOffset, Long.MAX_VALUE).toSeq());
+            List<LogSegment> segments = log.logSegments(fromOffset, Long.MAX_VALUE);
             if (!segments.isEmpty()) {
                 for (int idx = 1; idx < segments.size(); idx++) {
                     LogSegment previousSeg = segments.get(idx - 1);
@@ -963,6 +957,7 @@ public class RemoteLogManager implements Closeable {
                                     // back to the caller. It's important to note that the task being executed is already
                                     // cancelled before the executing thread is interrupted. The caller is responsible
                                     // for handling the exception gracefully by checking if the task is already cancelled.
+                                    @SuppressWarnings("UnusedLocalVariable")
                                     boolean ignored = copyQuotaManagerLockCondition.await(quotaTimeout().toMillis(), TimeUnit.MILLISECONDS);
                                     throttleTimeMs = rlmCopyQuotaManager.getThrottleTimeMs();
                                 }
@@ -1249,11 +1244,6 @@ public class RemoteLogManager implements Closeable {
             }
 
             final UnifiedLog log = logOptional.get();
-            final Option<LeaderEpochFileCache> leaderEpochCacheOption = log.leaderEpochCache();
-            if (leaderEpochCacheOption.isEmpty()) {
-                logger.debug("No leader epoch cache available for partition: {}", topicIdPartition);
-                return;
-            }
 
             // Cleanup remote log segments and update the log start offset if applicable.
             final Iterator<RemoteLogSegmentMetadata> segmentMetadataIter = remoteLogMetadataManager.listRemoteLogSegments(topicIdPartition);
@@ -1281,7 +1271,7 @@ public class RemoteLogManager implements Closeable {
             final List<Integer> remoteLeaderEpochs = new ArrayList<>(epochsSet);
             Collections.sort(remoteLeaderEpochs);
 
-            LeaderEpochFileCache leaderEpochCache = leaderEpochCacheOption.get();
+            LeaderEpochFileCache leaderEpochCache = log.leaderEpochCache();
             // Build the leader epoch map by filtering the epochs that do not have any records.
             NavigableMap<Integer, Long> epochWithOffsets = buildFilteredLeaderEpochMap(leaderEpochCache.epochWithOffsets());
 
@@ -1680,10 +1670,8 @@ public class RemoteLogManager implements Closeable {
         OptionalInt epoch = OptionalInt.empty();
 
         if (logOptional.isPresent()) {
-            Option<LeaderEpochFileCache> leaderEpochCache = logOptional.get().leaderEpochCache();
-            if (leaderEpochCache != null && leaderEpochCache.isDefined()) {
-                epoch = leaderEpochCache.get().epochForOffset(offset);
-            }
+            LeaderEpochFileCache leaderEpochCache = logOptional.get().leaderEpochCache();
+            epoch = leaderEpochCache.epochForOffset(offset);
         }
 
         Optional<RemoteLogSegmentMetadata> rlsMetadataOptional = epoch.isPresent()
@@ -1725,10 +1713,7 @@ public class RemoteLogManager implements Closeable {
             // An empty record is sent instead of an incomplete batch when
             //  - there is no minimum-one-message constraint and
             //  - the first batch size is more than maximum bytes that can be sent and
-            //  - for FetchRequest version 3 or above.
-            if (!remoteStorageFetchInfo.minOneMessage &&
-                    !remoteStorageFetchInfo.hardMaxBytesLimit &&
-                    firstBatchSize > maxBytes) {
+            if (!remoteStorageFetchInfo.minOneMessage && firstBatchSize > maxBytes) {
                 return new FetchDataInfo(new LogOffsetMetadata(offset), MemoryRecords.EMPTY);
             }
 
@@ -1788,7 +1773,7 @@ public class RemoteLogManager implements Closeable {
 
         Consumer<List<AbortedTxn>> accumulator =
                 abortedTxns -> abortedTransactions.addAll(abortedTxns.stream()
-                        .map(AbortedTxn::asAbortedTransaction).collect(Collectors.toList()));
+                        .map(AbortedTxn::asAbortedTransaction).toList());
 
         long startTimeNs = time.nanoseconds();
         collectAbortedTransactions(startOffset, upperBoundOffset, segmentMetadata, accumulator, log);
@@ -1819,7 +1804,7 @@ public class RemoteLogManager implements Closeable {
                                             UnifiedLog log) throws RemoteStorageException {
         TopicPartition tp = segmentMetadata.topicIdPartition().topicPartition();
         boolean isSearchComplete = false;
-        LeaderEpochFileCache leaderEpochCache = log.leaderEpochCache().getOrElse(null);
+        LeaderEpochFileCache leaderEpochCache = log.leaderEpochCache();
         Optional<RemoteLogSegmentMetadata> currentMetadataOpt = Optional.of(segmentMetadata);
         while (!isSearchComplete && currentMetadataOpt.isPresent()) {
             RemoteLogSegmentMetadata currentMetadata = currentMetadataOpt.get();
@@ -1866,13 +1851,9 @@ public class RemoteLogManager implements Closeable {
 
     // visible for testing.
     Optional<RemoteLogSegmentMetadata> findNextSegmentMetadata(RemoteLogSegmentMetadata segmentMetadata,
-                                                               Option<LeaderEpochFileCache> leaderEpochFileCacheOption) throws RemoteStorageException {
-        if (leaderEpochFileCacheOption.isEmpty()) {
-            return Optional.empty();
-        }
-
+                                                               LeaderEpochFileCache leaderEpochFileCacheOption) throws RemoteStorageException {
         long nextSegmentBaseOffset = segmentMetadata.endOffset() + 1;
-        OptionalInt epoch = leaderEpochFileCacheOption.get().epochForOffset(nextSegmentBaseOffset);
+        OptionalInt epoch = leaderEpochFileCacheOption.epochForOffset(nextSegmentBaseOffset);
         return epoch.isPresent()
                 ? fetchRemoteLogSegmentMetadata(segmentMetadata.topicIdPartition().topicPartition(), epoch.getAsInt(), nextSegmentBaseOffset)
                 : Optional.empty();
@@ -1887,7 +1868,7 @@ public class RemoteLogManager implements Closeable {
      * Visible for testing
      * @param tp The topic partition.
      * @param offset The offset to start the search.
-     * @param leaderEpochCache The leader epoch file cache, this could be null.
+     * @param leaderEpochCache The leader epoch file cache.
      * @return The next segment metadata that contains the transaction index. The transaction index may or may not exist
      * in that segment metadata which depends on the RLMM plugin implementation. The caller of this method should handle
      * for both the cases.
@@ -1896,9 +1877,6 @@ public class RemoteLogManager implements Closeable {
     Optional<RemoteLogSegmentMetadata> findNextSegmentWithTxnIndex(TopicPartition tp,
                                                                    long offset,
                                                                    LeaderEpochFileCache leaderEpochCache) throws RemoteStorageException {
-        if (leaderEpochCache == null) {
-            return Optional.empty();
-        }
         OptionalInt initialEpochOpt = leaderEpochCache.epochForOffset(offset);
         if (initialEpochOpt.isEmpty()) {
             return Optional.empty();
@@ -1933,30 +1911,27 @@ public class RemoteLogManager implements Closeable {
 
     OffsetAndEpoch findHighestRemoteOffset(TopicIdPartition topicIdPartition, UnifiedLog log) throws RemoteStorageException {
         OffsetAndEpoch offsetAndEpoch = null;
-        Option<LeaderEpochFileCache> leaderEpochCacheOpt = log.leaderEpochCache();
-        if (leaderEpochCacheOpt.isDefined()) {
-            LeaderEpochFileCache cache = leaderEpochCacheOpt.get();
-            Optional<EpochEntry> maybeEpochEntry = cache.latestEntry();
-            while (offsetAndEpoch == null && maybeEpochEntry.isPresent()) {
-                int epoch = maybeEpochEntry.get().epoch;
-                Optional<Long> highestRemoteOffsetOpt =
-                        remoteLogMetadataManager.highestOffsetForEpoch(topicIdPartition, epoch);
-                if (highestRemoteOffsetOpt.isPresent()) {
-                    Map.Entry<Integer, Long> entry = cache.endOffsetFor(epoch, log.logEndOffset());
-                    int requestedEpoch = entry.getKey();
-                    long endOffset = entry.getValue();
-                    long highestRemoteOffset = highestRemoteOffsetOpt.get();
-                    if (endOffset <= highestRemoteOffset) {
-                        LOGGER.info("The end-offset for epoch {}: ({}, {}) is less than or equal to the " +
-                                "highest-remote-offset: {} for partition: {}", epoch, requestedEpoch, endOffset,
-                                highestRemoteOffset, topicIdPartition);
-                        offsetAndEpoch = new OffsetAndEpoch(endOffset - 1, requestedEpoch);
-                    } else {
-                        offsetAndEpoch = new OffsetAndEpoch(highestRemoteOffset, epoch);
-                    }
+        LeaderEpochFileCache leaderEpochCache = log.leaderEpochCache();
+        Optional<EpochEntry> maybeEpochEntry = leaderEpochCache.latestEntry();
+        while (offsetAndEpoch == null && maybeEpochEntry.isPresent()) {
+            int epoch = maybeEpochEntry.get().epoch;
+            Optional<Long> highestRemoteOffsetOpt =
+                    remoteLogMetadataManager.highestOffsetForEpoch(topicIdPartition, epoch);
+            if (highestRemoteOffsetOpt.isPresent()) {
+                Map.Entry<Integer, Long> entry = leaderEpochCache.endOffsetFor(epoch, log.logEndOffset());
+                int requestedEpoch = entry.getKey();
+                long endOffset = entry.getValue();
+                long highestRemoteOffset = highestRemoteOffsetOpt.get();
+                if (endOffset <= highestRemoteOffset) {
+                    LOGGER.info("The end-offset for epoch {}: ({}, {}) is less than or equal to the " +
+                            "highest-remote-offset: {} for partition: {}", epoch, requestedEpoch, endOffset,
+                            highestRemoteOffset, topicIdPartition);
+                    offsetAndEpoch = new OffsetAndEpoch(endOffset - 1, requestedEpoch);
+                } else {
+                    offsetAndEpoch = new OffsetAndEpoch(highestRemoteOffset, epoch);
                 }
-                maybeEpochEntry = cache.previousEntry(epoch);
             }
+            maybeEpochEntry = leaderEpochCache.previousEntry(epoch);
         }
         if (offsetAndEpoch == null) {
             offsetAndEpoch = new OffsetAndEpoch(-1L, RecordBatch.NO_PARTITION_LEADER_EPOCH);
@@ -1966,20 +1941,17 @@ public class RemoteLogManager implements Closeable {
 
     long findLogStartOffset(TopicIdPartition topicIdPartition, UnifiedLog log) throws RemoteStorageException {
         Optional<Long> logStartOffset = Optional.empty();
-        Option<LeaderEpochFileCache> maybeLeaderEpochFileCache = log.leaderEpochCache();
-        if (maybeLeaderEpochFileCache.isDefined()) {
-            LeaderEpochFileCache cache = maybeLeaderEpochFileCache.get();
-            OptionalInt earliestEpochOpt = cache.earliestEntry()
-                    .map(epochEntry -> OptionalInt.of(epochEntry.epoch))
-                    .orElseGet(OptionalInt::empty);
-            while (logStartOffset.isEmpty() && earliestEpochOpt.isPresent()) {
-                Iterator<RemoteLogSegmentMetadata> iterator =
-                        remoteLogMetadataManager.listRemoteLogSegments(topicIdPartition, earliestEpochOpt.getAsInt());
-                if (iterator.hasNext()) {
-                    logStartOffset = Optional.of(iterator.next().startOffset());
-                }
-                earliestEpochOpt = cache.nextEpoch(earliestEpochOpt.getAsInt());
+        LeaderEpochFileCache leaderEpochCache = log.leaderEpochCache();
+        OptionalInt earliestEpochOpt = leaderEpochCache.earliestEntry()
+                .map(epochEntry -> OptionalInt.of(epochEntry.epoch))
+                .orElseGet(OptionalInt::empty);
+        while (logStartOffset.isEmpty() && earliestEpochOpt.isPresent()) {
+            Iterator<RemoteLogSegmentMetadata> iterator =
+                    remoteLogMetadataManager.listRemoteLogSegments(topicIdPartition, earliestEpochOpt.getAsInt());
+            if (iterator.hasNext()) {
+                logStartOffset = Optional.of(iterator.next().startOffset());
             }
+            earliestEpochOpt = leaderEpochCache.nextEpoch(earliestEpochOpt.getAsInt());
         }
         return logStartOffset.orElseGet(log::localLogStartOffset);
     }
