@@ -85,11 +85,11 @@ class ConsumerTask implements Runnable, Closeable {
     private final Object assignPartitionsLock = new Object();
 
     // Remote log metadata topic partitions that consumer is assigned to.
-    private volatile Set<Integer> assignedMetadataPartitions = Collections.emptySet();
+    private volatile Set<Integer> assignedMetadataPartitions = Set.of();
 
     // User topic partitions that this broker is a leader/follower for.
-    private volatile Map<TopicIdPartition, UserTopicIdPartition> assignedUserTopicIdPartitions = Collections.emptyMap();
-    private volatile Set<TopicIdPartition> processedAssignmentOfUserTopicIdPartitions = Collections.emptySet();
+    private volatile Map<TopicIdPartition, UserTopicIdPartition> assignedUserTopicIdPartitions = Map.of();
+    private volatile Set<TopicIdPartition> processedAssignmentOfUserTopicIdPartitions = Set.of();
 
     private long uninitializedAt;
     private boolean isAllUserTopicPartitionsInitialized;
@@ -129,8 +129,8 @@ class ConsumerTask implements Runnable, Closeable {
         log.info("Exited from consumer task thread");
     }
 
-    // public for testing
-    public void ingestRecords() {
+    // visible for testing
+    void ingestRecords() {
         try {
             if (hasAssignmentChanged) {
                 maybeWaitForPartitionAssignments();
@@ -153,8 +153,9 @@ class ConsumerTask implements Runnable, Closeable {
         }
     }
 
-    // public for testing
-    public void closeConsumer() {
+    // visible for testing
+    @SuppressWarnings("deprecation")
+    void closeConsumer() {
         try {
             consumer.close(Duration.ofSeconds(30));
         } catch (final Exception e) {
@@ -298,12 +299,12 @@ class ConsumerTask implements Runnable, Closeable {
         log.info("Unassigned user-topic-partitions: {}", unassignedPartitions.size());
     }
 
-    public void addAssignmentsForPartitions(final Set<TopicIdPartition> partitions) {
-        updateAssignments(Objects.requireNonNull(partitions), Collections.emptySet());
+    void addAssignmentsForPartitions(final Set<TopicIdPartition> partitions) {
+        updateAssignments(Objects.requireNonNull(partitions), Set.of());
     }
 
-    public void removeAssignmentsForPartitions(final Set<TopicIdPartition> partitions) {
-        updateAssignments(Collections.emptySet(), Objects.requireNonNull(partitions));
+    void removeAssignmentsForPartitions(final Set<TopicIdPartition> partitions) {
+        updateAssignments(Set.of(), Objects.requireNonNull(partitions));
     }
 
     private void updateAssignments(final Set<TopicIdPartition> addedPartitions,
@@ -325,15 +326,15 @@ class ConsumerTask implements Runnable, Closeable {
         }
     }
 
-    public Optional<Long> readOffsetForMetadataPartition(final int partition) {
+    Optional<Long> readOffsetForMetadataPartition(final int partition) {
         return Optional.ofNullable(readOffsetsByMetadataPartition.get(partition));
     }
 
-    public boolean isMetadataPartitionAssigned(final int partition) {
+    boolean isMetadataPartitionAssigned(final int partition) {
         return assignedMetadataPartitions.contains(partition);
     }
 
-    public boolean isUserPartitionAssigned(final TopicIdPartition partition) {
+    boolean isUserPartitionAssigned(final TopicIdPartition partition) {
         final UserTopicIdPartition utp = assignedUserTopicIdPartitions.get(partition);
         return utp != null && utp.isAssigned;
     }
@@ -351,7 +352,7 @@ class ConsumerTask implements Runnable, Closeable {
         }
     }
 
-    public Set<Integer> metadataPartitionsAssigned() {
+    Set<Integer> metadataPartitionsAssigned() {
         return Collections.unmodifiableSet(assignedMetadataPartitions);
     }
 
