@@ -36,7 +36,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
@@ -51,7 +50,6 @@ import java.util.function.Supplier;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import static java.util.Collections.singletonList;
 import static org.apache.kafka.common.utils.Utils.require;
 import static org.apache.kafka.storage.internals.log.LogFileUtils.CLEANED_FILE_SUFFIX;
 import static org.apache.kafka.storage.internals.log.LogFileUtils.DELETED_FILE_SUFFIX;
@@ -220,7 +218,6 @@ public class LocalLog {
      * @param newConfig the new configuration to be updated to
      */
     public void updateConfig(LogConfig newConfig) {
-        LogConfig oldConfig = config;
         config = newConfig;
     }
 
@@ -358,7 +355,7 @@ public class LocalLog {
      */
     public List<LogSegment> deleteAllSegments() {
         return maybeHandleIOException(
-            () -> "Error while deleting all segments for $topicPartition in dir ${dir.getParent}",
+            () -> String.format("Error while deleting all segments for %s in dir %s", topicPartition, dir.getParent()),
             () -> {
                 List<LogSegment> deletableSegments = new ArrayList<>(segments.values());
                 removeAndDeleteSegments(
@@ -434,11 +431,11 @@ public class LocalLog {
                 config.preallocate);
         segments.add(newSegment);
 
-        reason.logReason(singletonList(segmentToDelete));
+        reason.logReason(List.of(segmentToDelete));
         if (newOffset != segmentToDelete.baseOffset()) {
             segments.remove(segmentToDelete.baseOffset());
         }
-        deleteSegmentFiles(singletonList(segmentToDelete), asyncDelete, dir, topicPartition, config, scheduler, logDirFailureChannel, logIdent);
+        deleteSegmentFiles(List.of(segmentToDelete), asyncDelete, dir, topicPartition, config, scheduler, logDirFailureChannel, logIdent);
         return newSegment;
     }
 
@@ -470,8 +467,8 @@ public class LocalLog {
         return maybeHandleIOException(
                 () -> "Exception while reading from " + topicPartition + " in dir " + dir.getParent(),
                 () -> {
-                    logger.trace("Reading maximum $maxLength bytes at offset {} from log with total length {} bytes",
-                            startOffset, segments.sizeInBytes());
+                    logger.trace("Reading maximum {} bytes at offset {} from log with total length {} bytes",
+                            maxLength, startOffset, segments.sizeInBytes());
 
                     LogOffsetMetadata endOffsetMetadata = nextOffsetMetadata;
                     long endOffset = endOffsetMetadata.messageOffset;
@@ -525,8 +522,8 @@ public class LocalLog {
         );
     }
 
-    public void append(long lastOffset, long largestTimestamp, long shallowOffsetOfMaxTimestamp, MemoryRecords records) throws IOException {
-        segments.activeSegment().append(lastOffset, largestTimestamp, shallowOffsetOfMaxTimestamp, records);
+    public void append(long lastOffset, MemoryRecords records) throws IOException {
+        segments.activeSegment().append(lastOffset, records);
         updateLogEndOffset(lastOffset + 1);
     }
 
@@ -620,7 +617,7 @@ public class LocalLog {
                     File offsetIdxFile = LogFileUtils.offsetIndexFile(dir, newOffset);
                     File timeIdxFile = LogFileUtils.timeIndexFile(dir, newOffset);
                     File txnIdxFile = LogFileUtils.transactionIndexFile(dir, newOffset);
-                    for (File file : Arrays.asList(logFile, offsetIdxFile, timeIdxFile, txnIdxFile)) {
+                    for (File file : List.of(logFile, offsetIdxFile, timeIdxFile, txnIdxFile)) {
                         if (file.exists()) {
                             logger.warn("Newly rolled segment file {} already exists; deleting it first", file.getAbsolutePath());
                             Files.delete(file.toPath());
@@ -792,7 +789,7 @@ public class LocalLog {
 
     private static FetchDataInfo emptyFetchDataInfo(LogOffsetMetadata fetchOffsetMetadata, boolean includeAbortedTxns) {
         Optional<List<FetchResponseData.AbortedTransaction>> abortedTransactions = includeAbortedTxns
-            ? Optional.of(Collections.emptyList())
+            ? Optional.of(List.of())
             : Optional.empty();
         return new FetchDataInfo(fetchOffsetMetadata, MemoryRecords.EMPTY, false, abortedTransactions);
     }
@@ -810,7 +807,7 @@ public class LocalLog {
     public static <T> T maybeHandleIOException(LogDirFailureChannel logDirFailureChannel,
                                                String logDir,
                                                Supplier<String> errorMsgSupplier,
-                                               StorageAction<T, IOException> function) {
+                                               StorageAction<T, IOException> function) throws KafkaStorageException {
         if (logDirFailureChannel.hasOfflineLogDir(logDir)) {
             throw new KafkaStorageException("The log dir " + logDir + " is already offline due to a previous IO exception.");
         }
@@ -943,8 +940,8 @@ public class LocalLog {
                 throw new IllegalStateException("Inconsistent segment sizes after split before: " + segment.log().sizeInBytes() + " after: " + totalSizeOfNewSegments);
             }
             // replace old segment with new ones
-            LOG.info("{}Replacing overflowed segment $segment with split segments {}", logPrefix, newSegments);
-            List<LogSegment> deletedSegments = replaceSegments(existingSegments, newSegments, singletonList(segment),
+            LOG.info("{}Replacing overflowed segment {} with split segments {}", logPrefix, segment, newSegments);
+            List<LogSegment> deletedSegments = replaceSegments(existingSegments, newSegments, List.of(segment),
                     dir, topicPartition, config, scheduler, logDirFailureChannel, logPrefix, false);
             return new SplitSegmentResult(deletedSegments, newSegments);
         } catch (Exception e) {
@@ -1013,7 +1010,7 @@ public class LocalLog {
         List<LogSegment> sortedOldSegments = oldSegments.stream()
                 .filter(seg -> existingSegments.contains(seg.baseOffset()))
                 .sorted(Comparator.comparingLong(LogSegment::baseOffset))
-                .collect(Collectors.toList());
+                .toList();
 
         // need to do this in two phases to be crash safe AND do the deletion asynchronously
         // if we crash in the middle of this we complete the swap in loadSegments()
@@ -1036,7 +1033,7 @@ public class LocalLog {
                 existingSegments.remove(segment.baseOffset());
             }
             deleteSegmentFiles(
-                    singletonList(segment),
+                    List.of(segment),
                     true,
                     dir,
                     topicPartition,
